missing data exploring

--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -1,5 +1,11 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/anaconda
 {
-  "image": "ghcr.io/devcontainers/templates/anaconda:1.2.0",
+  "name": "Anaconda (Python 3)",
+  "build": {
+    "context": "..",
+    "dockerfile": "Dockerfile"
+  },
   "features": {
     "ghcr.io/devcontainers/features/java:1": {
       "version": "17"
@@ -11,9 +17,21 @@
       "packages": "graphviz"
     }
   },
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "python --version",
+  // Configure tool-specific properties.
+  // "customizations": {},
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  "remoteUser": "root",
   "customizations": {
     "vscode": {
       "extensions": [
+        "ms-toolsai.jupyter",
+        "ms-python.python",
         "streetsidesoftware.code-spell-checker",
         "charliermarsh.ruff",
         "ms-python.python",
@@ -23,9 +41,8 @@
         "SonarSource.sonarlint-vscode"
       ],
       "settings": {
-        "sonarlint.ls.javaHome": "/usr/local/sdkman/candidates/java/17.0.10-ms"
+        "sonarlint.ls.javaHome": "/usr/local/sdkman/candidates/java/17.0.11-ms"
       }
     }
-  },
-  "remoteUser": "root"
+  }
 }
